@@ -29,6 +29,7 @@ import smithereen.Utils;
 import smithereen.activitypub.objects.Actor;
 import smithereen.activitypub.objects.ForeignActor;
 import smithereen.activitypub.objects.LocalImage;
+import smithereen.controllers.WallController;
 import smithereen.exceptions.BadRequestException;
 import smithereen.exceptions.ObjectNotFoundException;
 import smithereen.exceptions.UserActionNotAllowedException;
@@ -37,6 +38,7 @@ import smithereen.model.Account;
 import smithereen.model.CommentViewType;
 import smithereen.model.Group;
 import smithereen.model.ObfuscatedObjectIDType;
+import smithereen.model.OwnerAndAuthor;
 import smithereen.model.PaginatedList;
 import smithereen.model.Poll;
 import smithereen.model.PollOption;
@@ -47,12 +49,13 @@ import smithereen.model.SizedImage;
 import smithereen.model.User;
 import smithereen.model.UserInteractions;
 import smithereen.model.UserPrivacySettingKey;
+import smithereen.model.WebDeltaResponse;
 import smithereen.model.admin.UserRole;
 import smithereen.model.admin.ViolationReport;
-import smithereen.model.WebDeltaResponse;
 import smithereen.model.attachments.Attachment;
 import smithereen.model.attachments.PhotoAttachment;
 import smithereen.model.groups.GroupFeatureState;
+import smithereen.model.media.MediaFileUploadPurpose;
 import smithereen.model.media.PhotoViewerInlineData;
 import smithereen.model.photos.Photo;
 import smithereen.model.reports.ReportableContentObject;
@@ -73,14 +76,14 @@ public class PostRoutes{
 	private static final Logger LOG=LoggerFactory.getLogger(PostRoutes.class);
 
 	public static Object createUserWallPost(Request req, Response resp, Account self, ApplicationContext ctx){
-		int id=Utils.parseIntOrDefault(req.params(":id"), 0);
+		int id=parseIntOrDefault(req.params(":id"), 0);
 		User user=ctx.getUsersController().getUserOrThrow(id);
 		ctx.getUsersController().ensureUserNotBlocked(self.user, user);
 		return createWallPost(req, resp, self, user, ctx);
 	}
 
 	public static Object createGroupWallPost(Request req, Response resp, Account self, ApplicationContext ctx){
-		int id=Utils.parseIntOrDefault(req.params(":id"), 0);
+		int id=parseIntOrDefault(req.params(":id"), 0);
 		Group group=ctx.getGroupsController().getGroupOrThrow(id);
 		return createWallPost(req, resp, self, group, ctx);
 	}
@@ -92,28 +95,22 @@ public class PostRoutes{
 		if(StringUtils.isNotEmpty(pollQuestion)){
 			List<String> pollOptions=Arrays.stream(req.queryParams("pollOption")!=null ? req.queryMap("pollOption").values() : new String[0]).map(String::trim).filter(StringUtils::isNotEmpty).collect(Collectors.toList());
 			if(pollOptions.size()>=2){
-				poll=new Poll();
-				poll.question=pollQuestion;
-				poll.anonymous="on".equals(req.queryParams("pollAnonymous"));
-				poll.multipleChoice="on".equals(req.queryParams("pollMultiChoice"));
+				Instant pollEndTime=null;
 				boolean timeLimit="on".equals(req.queryParams("pollTimeLimit"));
 				if(timeLimit){
 					int seconds=parseIntOrDefault(req.queryParams("pollTimeLimitValue"), 0);
 					if(seconds>60)
-						poll.endTime=Instant.now().plusSeconds(seconds);
+						pollEndTime=Instant.now().plusSeconds(seconds);
 				}
-				poll.options=pollOptions.stream().map(o->{
-					PollOption opt=new PollOption();
-					opt.text=o;
-					return opt;
-				}).collect(Collectors.toList());
+				int pollID=ctx.getWallController().createPoll(self.user, owner, pollQuestion, pollOptions, "on".equals(req.queryParams("pollAnonymous")), "on".equals(req.queryParams("pollMultiChoice")), pollEndTime);
+				poll=ctx.getWallController().getPollByID(pollID);
 			}else{
 				poll=null;
 			}
 		}else{
 			poll=null;
 		}
-		int replyTo=Utils.parseIntOrDefault(req.queryParams("replyTo"), 0);
+		int replyTo=parseIntOrDefault(req.queryParams("replyTo"), 0);
 		String contentWarning=req.queryParams("contentWarning");
 		List<String> attachments;
 		Map<String, String> attachmentAltTexts;
@@ -141,9 +138,10 @@ public class PostRoutes{
 			inReplyTo=ctx.getWallController().getPostOrThrow(replyTo);
 			if(inReplyTo.isMastodonStyleRepost())
 				inReplyTo=ctx.getWallController().getPostOrThrow(inReplyTo.repostOf);
+			owner=ctx.getWallController().getContentAuthorAndOwner(inReplyTo).owner();
 		}
 
-		Post post=ctx.getWallController().createWallPost(self.user, self.id, owner, inReplyTo, text, self.prefs.textFormat, contentWarning, attachments, poll, repost, attachmentAltTexts, null);
+		Post post=ctx.getWallController().createWallPost(self.user, owner, inReplyTo, text, self.prefs.textFormat, contentWarning, attachments, poll, repost, attachmentAltTexts, null, null, null);
 
 		SessionInfo sess=sessionInfo(req);
 		sess.postDraftAttachments.clear();
@@ -152,6 +150,8 @@ public class PostRoutes{
 			String ridSuffix="";
 			if(StringUtils.isNotEmpty(rid))
 				ridSuffix="_"+rid;
+
+			CommentViewType viewType=self.prefs.commentViewType;
 
 			boolean fromNotifications="notifications".equals(req.queryParams("from"));
 
@@ -176,7 +176,7 @@ public class PostRoutes{
 			}
 			if(replyTo!=0){
 				PostViewModel topLevel=new PostViewModel(context(req).getWallController().getPostOrThrow(post.replyKey.getFirst()));
-				model.with("replyFormID", "wallPostForm_commentReplyPost"+post.getReplyChainElement(0)+ridSuffix);
+				model.with("replyFormID", (viewType==CommentViewType.FLAT || isMobile(req) ? "wallPostForm_commentPost" : "wallPostForm_commentReplyPost")+post.getReplyChainElement(0)+ridSuffix);
 				model.with("topLevel", topLevel);
 				needInteractions.add(topLevel);
 				if(StringUtils.isNotEmpty(rid))
@@ -212,7 +212,7 @@ public class PostRoutes{
 						.addClass("wallPostForm_"+formID, "collapsed");
 			}else if(replyTo==0){
 				rb=new WebDeltaResponse(resp).insertHTML(WebDeltaResponse.ElementInsertionMode.AFTER_BEGIN, "postList", postHTML);
-				int newPostCount=Utils.parseIntOrDefault(req.queryParams("wallPostCount"), -1)+1;
+				int newPostCount=parseIntOrDefault(req.queryParams("wallPostCount"), -1)+1;
 				if(newPostCount>0){
 					// When creating a new post, update the wall header with the incremented number.
 					// It is deliberate that we just increment the previous value instead of fetching the up-to-date value
@@ -248,7 +248,7 @@ public class PostRoutes{
 			}
 			return rb.setInputValue("postFormText_"+formID, "").setContent("postFormAttachments_"+formID, "");
 		}
-		resp.redirect(Utils.back(req));
+		resp.redirect(back(req));
 		return "";
 	}
 
@@ -274,7 +274,9 @@ public class PostRoutes{
 
 		model.with("addClasses", "editing nonCollapsible").with("isEditing", true).with("id", "edit"+id+ridSuffix).with("editingPostID", id);
 		PostSource source=ctx.getWallController().getPostSource(post);
-		model.with("prefilledPostText", source.text()).with("sourceFormat", source.format());
+		model.with("prefilledPostText", source.text())
+				.with("sourceFormat", source.format())
+				.with("isComment", post.getReplyLevel()>0);
 		if(post.hasContentWarning())
 			model.with("contentWarning", post.contentWarning);
 		if(post.poll!=null)
@@ -282,12 +284,12 @@ public class PostRoutes{
 		if(post.attachments!=null && !post.attachments.isEmpty()){
 			model.with("draftAttachments", post.attachments);
 			model.with("attachAltTexts", post.attachments.stream()
-					.map(att->att instanceof LocalImage li && li.photoID==0 && li.name!=null ? new Pair<>(li.fileRecord.id().getIDForClient(), li.name) : null)
+					.map(att->att instanceof LocalImage li && li.photoID==0 && li.name!=null ? new Pair<>(li.getLocalID(MediaFileUploadPurpose.ATTACHMENT, self.user.id), li.name) : null)
 					.filter(Objects::nonNull)
 					.collect(Collectors.toMap(Pair::first, Pair::second))
 			);
 			Map<String, PhotoViewerInlineData> pvData=post.attachments.stream()
-					.map(att->att instanceof LocalImage li && li.photoID==0 ? new Pair<>(li.getLocalID(), new PhotoViewerInlineData(0, "rawFile/"+li.getLocalID(), li.getURLsForPhotoViewer())) : null)
+					.map(att->att instanceof LocalImage li && li.photoID==0 ? new Pair<>(li.getLocalID(MediaFileUploadPurpose.ATTACHMENT, self.user.id), new PhotoViewerInlineData(0, "rawFile/"+li.getLocalID(MediaFileUploadPurpose.ATTACHMENT, self.user.id), li.getURLsForPhotoViewer())) : null)
 					.filter(Objects::nonNull)
 					.collect(Collectors.toMap(Pair::first, Pair::second, (a, b)->b));
 			model.with("attachPvData", pvData);
@@ -309,32 +311,35 @@ public class PostRoutes{
 		return model.pageTitle(lang(req).get(post.getReplyLevel()>0 ? "editing_comment" : "editing_post"));
 	}
 
-	public static Object editPost(Request req, Response resp, Account self, ApplicationContext ctx){
+	public static Object editPost(Request req, Response resp, SessionInfo info, ApplicationContext ctx){
 		int id=parseIntOrDefault(req.params(":postID"), 0);
 		String text=req.queryParams("text");
 		Poll poll;
 		String pollQuestion=req.queryParams("pollQuestion");
 		if(StringUtils.isNotEmpty(pollQuestion)){
 			Post post=ctx.getWallController().getPostOrThrow(id);
+			OwnerAndAuthor oaa=ctx.getWallController().getContentAuthorAndOwner(post);
 			List<String> pollOptions=Arrays.stream(req.queryParams("pollOption")!=null ? req.queryMap("pollOption").values() : new String[0]).map(String::trim).filter(StringUtils::isNotEmpty).collect(Collectors.toList());
+
 			if(pollOptions.size()>=2){
-				poll=new Poll();
-				poll.question=pollQuestion;
-				poll.anonymous="on".equals(req.queryParams("pollAnonymous"));
-				poll.multipleChoice="on".equals(req.queryParams("pollMultiChoice"));
+				Instant pollEndTime=null;
 				boolean timeLimit="on".equals(req.queryParams("pollTimeLimit"));
 				if(timeLimit){
 					int seconds=parseIntOrDefault(req.queryParams("pollTimeLimitValue"), 0);
 					if(seconds>60)
-						poll.endTime=Instant.now().plusSeconds(seconds);
+						pollEndTime=Instant.now().plusSeconds(seconds);
 					else if(seconds==-1 && post.poll!=null)
-						poll.endTime=post.poll.endTime;
+						pollEndTime=post.poll.endTime;
 				}
-				poll.options=pollOptions.stream().map(o->{
-					PollOption opt=new PollOption();
-					opt.text=o;
-					return opt;
-				}).collect(Collectors.toList());
+				boolean anonymous="on".equals(req.queryParams("pollAnonymous"));
+				boolean multiChoice="on".equals(req.queryParams("pollMultiChoice"));
+				if(post.poll!=null && post.poll.question.equals(pollQuestion) && post.poll.options.stream().map(o->o.text).toList().equals(pollOptions)
+						&& post.poll.anonymous==anonymous && post.poll.multipleChoice==multiChoice && Objects.equals(pollEndTime, post.poll.endTime)){
+					poll=post.poll;
+				}else{
+					int pollID=ctx.getWallController().createPoll(info.account.user, Objects.requireNonNull(oaa.owner()), pollQuestion, pollOptions, anonymous, multiChoice, pollEndTime);
+					poll=ctx.getWallController().getPollByID(pollID);
+				}
 			}else{
 				poll=null;
 			}
@@ -361,13 +366,13 @@ public class PostRoutes{
 			attachmentAltTexts=Map.of();
 		}
 
-		Post post=ctx.getWallController().editPost(self.user, sessionInfo(req).permissions, id, text, enumValue(req.queryParams("format"), FormattedTextFormat.class), contentWarning, attachments, poll, attachmentAltTexts);
+		Post post=ctx.getWallController().editPost(info.account.user, info.permissions, id, text, enumValue(req.queryParams("format"), FormattedTextFormat.class), contentWarning, attachments, poll, attachmentAltTexts);
 		if(isAjax(req)){
 			if(req.attribute("mobile")!=null)
 				return new WebDeltaResponse(resp).replaceLocation(post.getInternalURL().toString());
 
 			PostViewModel postVM=new PostViewModel(post);
-			ctx.getWallController().populateReposts(self.user, List.of(postVM), 2);
+			ctx.getWallController().populateReposts(info.account.user, List.of(postVM), 2);
 			String templateName;
 			boolean fromLayer;
 			if(req.queryParams("fromLayer")!=null && !isMobile(req)){
@@ -381,6 +386,9 @@ public class PostRoutes{
 			HashSet<Integer> needUsers=new HashSet<>();
 			PostViewModel.collectActorIDs(List.of(postVM), needUsers, null);
 			model.with("users", ctx.getUsersController().getUsers(needUsers));
+			HashSet<Long> needApps=new HashSet<>();
+			PostViewModel.collectAppIDs(List.of(postVM), needApps);
+			model.with("apps", ctx.getAppsController().getAppsByIDs(needApps));
 
 			String rid=req.queryParams("rid");
 			String ridSuffix="";
@@ -398,7 +406,7 @@ public class PostRoutes{
 					needInteractions.add(topLevel);
 				}catch(ObjectNotFoundException ignore){}
 			}
-			Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(needInteractions, self.user);
+			Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(needInteractions, info.account.user);
 			model.with("postInteractions", interactions);
 			return new WebDeltaResponse(resp).setContent("postInner"+post.id+ridSuffix, fromLayer ? model.renderToString() : model.renderBlock("postInner"))
 					.show("postInner"+post.id+ridSuffix)
@@ -412,13 +420,13 @@ public class PostRoutes{
 
 	public static Object standalonePost(Request req, Response resp){
 		ApplicationContext ctx=context(req);
-		int postID=Utils.parseIntOrDefault(req.params(":postID"), 0);
+		int postID=parseIntOrDefault(req.params(":postID"), 0);
 		PostViewModel post=new PostViewModel(ctx.getWallController().getPostOrThrow(postID));
 
 		boolean isLayer=!isMobile(req) && req.queryParams("ajaxLayer")!=null;
 
 		RenderedTemplateResponse model=new RenderedTemplateResponse(isLayer ? "wall_post_standalone_layer" : "wall_post_standalone", req);
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		Account self=null;
 		if(info!=null && info.account!=null){
 			self=info.account;
@@ -522,8 +530,10 @@ public class PostRoutes{
 		model.with("postInteractions", interactions);
 
 		HashSet<Integer> needUsers=new HashSet<>(), needGroups=new HashSet<>();
+		HashSet<Long> needApps=new HashSet<>();
 		PostViewModel.collectActorIDs(List.of(post), needUsers, needGroups);
 		PostViewModel.collectActorIDs(replies.list, needUsers, needGroups);
+		PostViewModel.collectAppIDs(List.of(post), needApps);
 
 		model.with("canSeeOthersPosts", !(owner instanceof User u) || ctx.getPrivacyController().checkUserPrivacy(self!=null ? self.user : null, u, UserPrivacySettingKey.WALL_OTHERS_POSTS));
 
@@ -532,55 +542,81 @@ public class PostRoutes{
 			HashMap<String, String> meta=new LinkedHashMap<>();
 			meta.put("og:site_name", Config.serverDisplayName);
 			meta.put("og:type", "article");
-			meta.put("og:title", author.getFullName());
 			meta.put("og:url", post.post.getInternalURL().toString());
-			meta.put("og:published_time", Utils.formatDateAsISO(post.post.createdAt));
+			meta.put("og:published_time", formatDateAsISO(post.post.createdAt));
 			meta.put("og:author", author.url.toString());
 			meta.put("profile:username", author.username+"@"+Config.domain);
-			if(StringUtils.isNotEmpty(post.post.text)){
-				String text=post.post.hasContentWarning() ? post.post.contentWarning : TextProcessor.truncateOnWordBoundary(post.post.text, 250);
-				meta.put("og:description", text);
-				moreMeta.put("description", text);
-			}
+			String title, description;
 			boolean hasImage=false;
-			if(post.post.attachments!=null && !post.post.attachments.isEmpty()){
-				for(Attachment att : post.post.getProcessedAttachments()){
-					if(att instanceof PhotoAttachment pa){
-						SizedImage.Dimensions size=pa.image.getDimensionsForSize(SizedImage.Type.PHOTO_MEDIUM);
-						meta.put("og:image", pa.image.getUriForSizeAndFormat(SizedImage.Type.PHOTO_MEDIUM, SizedImage.Format.JPEG).toString());
-						meta.put("og:image:width", String.valueOf(size.width));
-						meta.put("og:image:height", String.valueOf(size.height));
-						meta.put("og:image:type", "image/jpeg");
-						meta.put("twitter:card", "summary_large_image");
-						hasImage=true;
-						break;
+			if(post.post.hasContentWarning()){
+				description=post.post.contentWarning;
+			}else{
+				if(StringUtils.isNotEmpty(post.post.text)){
+					description=TextProcessor.truncateOnWordBoundary(post.post.text, 250);
+				}else{
+					description="";
+				}
+				if(post.post.attachments!=null && !post.post.attachments.isEmpty()){
+					for(Attachment att:post.post.getProcessedAttachments()){
+						if(att instanceof PhotoAttachment pa){
+							SizedImage.Dimensions size=pa.image.getDimensionsForSize(SizedImage.Type.PHOTO_MEDIUM);
+							meta.put("og:image", pa.image.getUriForSizeAndFormat(SizedImage.Type.PHOTO_MEDIUM, SizedImage.Format.JPEG).toString());
+							meta.put("og:image:width", String.valueOf(size.width));
+							meta.put("og:image:height", String.valueOf(size.height));
+							meta.put("og:image:type", "image/jpeg");
+							meta.put("twitter:card", "summary_large_image");
+							hasImage=true;
+							break;
+						}
 					}
 				}
 			}
+			Lang l=lang(req);
+			if(post.post.ownerID==post.post.authorID){
+				title=author.getFullName();
+			}else if(post.post.getReplyLevel()==0){
+				title=switch(owner){
+					case User user -> l.get("wall_of_X", Map.of("name", user.getFirstLastAndGender()));
+					case Group group -> group.name;
+					default -> throw new IllegalStateException("Unexpected value: " + owner);
+				};
+				description=author.getName()+": "+description;
+			}else{
+				title=switch(owner){
+					case User user -> l.get("comment_on_user_post", Map.of("name", user.getFirstLastAndGender()));
+					case Group group -> l.get(group.isEvent() ? "comment_on_event_post" : "comment_on_group_post", Map.of("name", group.name));
+					default -> throw new IllegalStateException("Unexpected value: " + owner);
+				};
+				description=author.getName()+": "+description;
+			}
+			meta.put("og:title", title);
+			meta.put("og:description", description);
+			moreMeta.put("description", description);
 			if(!hasImage){
 				meta.put("twitter:card", "summary");
 				if(author.hasAvatar()){
 					URI img=author.getAvatar().getUriForSizeAndFormat(SizedImage.Type.AVA_SQUARE_XLARGE, SizedImage.Format.JPEG);
-					if(img!=null){
-						SizedImage.Dimensions size=author.getAvatar().getDimensionsForSize(SizedImage.Type.AVA_SQUARE_XLARGE);
-						meta.put("og:image", img.toString());
-						meta.put("og:image:width", String.valueOf(size.width));
-						meta.put("og:image:height", String.valueOf(size.height));
-						meta.put("og:image:type", "image/jpeg");
-					}
+					SizedImage.Dimensions size=author.getAvatar().getDimensionsForSize(SizedImage.Type.AVA_SQUARE_XLARGE);
+					meta.put("og:image", img.toString());
+					meta.put("og:image:width", String.valueOf(size.width));
+					meta.put("og:image:height", String.valueOf(size.height));
+					meta.put("og:image:type", "image/jpeg");
 				}
 			}
 			model.with("metaTags", meta);
 			model.with("moreMetaTags", moreMeta);
 		}
-		Utils.jsLangKey(req, "yes", "no", "cancel", "delete_post", "delete_post_confirm", "delete_reply", "delete_reply_confirm", "delete", "post_form_cw", "post_form_cw_placeholder", "attach_menu_photo", "attach_menu_cw");
-		if(Utils.isMobile(req)){
-			Utils.jsLangKey(req, "attach_menu_photo_upload", "attach_menu_photo_from_album");
+		jsLangKey(req, "yes", "no", "cancel", "delete_post", "delete_post_confirm", "delete_reply", "delete_reply_confirm", "delete", "post_form_cw", "post_form_cw_placeholder", "attach_menu_photo", "attach_menu_cw");
+		if(isMobile(req)){
+			jsLangKey(req, "attach_menu_photo_upload", "attach_menu_photo_from_album");
 		}
-		model.with("title", post.post.getShortTitle(50)+" | "+author.getFullName());
+		String shortTitle=post.post.getShortTitle(50).strip();
+		if(shortTitle.isEmpty())
+			shortTitle=lang(req).get("wall_post_title");
+		model.with("title", shortTitle+" | "+author.getFullName());
 		if(req.attribute("mobile")!=null){
 			model.with("toolbarTitle", lang(req).get("wall_post_title"));
-			List<Integer> likers=ctx.getUserInteractionsController().getLikesForObject(post.post, info!=null && info.account!=null ? info.account.user : null, 0, 10).list;
+			List<Integer> likers=ctx.getUserInteractionsController().getLikesForObject(post.post, info!=null && info.account!=null ? info.account.user : null, 0, 10, true, false).list;
 			model.with("likedBy", likers);
 			needUsers.addAll(likers);
 		}
@@ -593,18 +629,19 @@ public class PostRoutes{
 
 		model.with("users", ctx.getUsersController().getUsers(needUsers, true))
 				.with("groups", ctx.getGroupsController().getGroupsByIdAsMap(needGroups))
+				.with("apps", ctx.getAppsController().getAppsByIDs(needApps))
 				.headerBack(owner);
 		return model;
 	}
 
 	public static Object confirmDelete(Request req, Response resp, Account self, ApplicationContext ctx){
 		req.attribute("noHistory", true);
-		int postID=Utils.parseIntOrDefault(req.params(":postID"), 0);
+		int postID=parseIntOrDefault(req.params(":postID"), 0);
 		if(postID==0){
 			throw new ObjectNotFoundException("err_post_not_found");
 		}
-		String back=Utils.back(req);
-		return new RenderedTemplateResponse("generic_confirm", req).with("message", Utils.lang(req).get("delete_post_confirm")).with("formAction", Config.localURI("/posts/"+postID+"/delete?_redir="+URLEncoder.encode(back))).with("back", back);
+		String back=back(req);
+		return new RenderedTemplateResponse("generic_confirm", req).with("message", lang(req).get("delete_post_confirm")).with("formAction", Config.localURI("/posts/"+postID+"/delete?_redir="+URLEncoder.encode(back))).with("back", back);
 	}
 
 	public static Object delete(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -631,7 +668,7 @@ public class PostRoutes{
 			}else if(req.queryParams("elid")!=null){
 				return wdr.remove(req.queryParams("elid"));
 			}
-			int newPostCount=Utils.parseIntOrDefault(req.queryParams("wallPostCount"), -1)-1;
+			int newPostCount=parseIntOrDefault(req.queryParams("wallPostCount"), -1)-1;
 			if(newPostCount>=0){
 				wdr.setContent("wallPostCount", lang(req).get("X_posts", Map.of("count", newPostCount)))
 						.setInputValue("wallPostCountInput", Integer.toString(newPostCount));
@@ -641,7 +678,7 @@ public class PostRoutes{
 			}
 			return wdr.remove("post"+post.id+ridSuffix, "postReplies"+post.id+ridSuffix);
 		}
-		resp.redirect(Utils.back(req));
+		resp.redirect(back(req));
 		return "";
 	}
 
@@ -690,14 +727,14 @@ public class PostRoutes{
 
 	public static Object likeList(Request req, Response resp){
 		ApplicationContext ctx=context(req);
-		int postID=Utils.parseIntOrDefault(req.params(":postID"), 0);
+		int postID=parseIntOrDefault(req.params(":postID"), 0);
 		Post post=ctx.getWallController().getPostOrThrow(postID);
 		return UserInteractionsRoutes.likeList(req, resp, post);
 	}
 
 	public static Object userWallAll(Request req, Response resp){
 		User user=context(req).getUsersController().getUserOrThrow(safeParseInt(req.params(":id")));
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		ApplicationContext ctx=context(req);
 		ctx.getPrivacyController().enforceUserPrivacy(self==null ? null : self.user, user, UserPrivacySettingKey.WALL_OTHERS_POSTS);
@@ -719,23 +756,27 @@ public class PostRoutes{
 	public static void preparePostList(ApplicationContext ctx, List<PostViewModel> wall, RenderedTemplateResponse model, Account self){
 		HashSet<Integer> needUsers=new HashSet<>(), needGroups=new HashSet<>();
 		PostViewModel.collectActorIDs(wall, needUsers, needGroups);
+		HashSet<Long> needApps=new HashSet<>();
+		PostViewModel.collectAppIDs(wall, needApps);
 		model.with("users", ctx.getUsersController().getUsers(needUsers, true))
 				.with("groups", ctx.getGroupsController().getGroupsByIdAsMap(needGroups))
+				.with("apps", ctx.getAppsController().getAppsByIDs(needApps))
 				.with("maxReplyDepth", getMaxReplyDepth(self));
 	}
 
 	private static Object wall(Request req, Response resp, Actor owner, boolean ownOnly){
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		ApplicationContext ctx=context(req);
 		if(owner instanceof Group group)
 			ctx.getPrivacyController().enforceUserAccessToGroupContent(self!=null ? self.user : null, group);
 
 		int offset=offset(req);
-		PaginatedList<PostViewModel> wall=PostViewModel.wrap(ctx.getWallController().getWallPosts(self!=null ? self.user : null, owner, ownOnly, offset, 20));
+		PaginatedList<PostViewModel> wall=PostViewModel.wrap(ctx.getWallController().getWallPosts(self!=null ? self.user : null, owner, ownOnly ? WallController.WallMode.OWNER : WallController.WallMode.ALL, offset, 20));
 		ctx.getWallController().populateReposts(self!=null ? self.user : null, wall.list, 2);
+		CommentViewType viewType=self!=null ? self.prefs.commentViewType : CommentViewType.THREADED;
 		if(req.attribute("mobile")==null){
-			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, self!=null ? self.prefs.commentViewType : CommentViewType.THREADED);
+			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, viewType);
 		}
 		Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(wall.list, self!=null ? self.user : null);
 
@@ -747,6 +788,7 @@ public class PostRoutes{
 				.with("ownOnly", ownOnly)
 				.with("canSeeOthersPosts", !(owner instanceof User u) || ctx.getPrivacyController().checkUserPrivacy(self==null ? null : self.user, u, UserPrivacySettingKey.WALL_OTHERS_POSTS))
 				.with("tab", ownOnly ? "own" : "all")
+				.with("commentViewType", viewType)
 				.headerBack(owner);
 
 		List<PostViewModel> pinnedPosts=null;
@@ -755,7 +797,7 @@ public class PostRoutes{
 			if(offset==0){
 				pinnedPosts=rawPinnedPosts.stream().map(PostViewModel::new).toList();
 				if(req.attribute("mobile")==null){
-					ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, pinnedPosts, self!=null ? self.prefs.commentViewType : CommentViewType.THREADED);
+					ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, pinnedPosts, viewType);
 				}
 				model.with("pinnedPosts", pinnedPosts);
 			}
@@ -801,14 +843,15 @@ public class PostRoutes{
 		ApplicationContext ctx=context(req);
 		User user=ctx.getUsersController().getUserOrThrow(safeParseInt(req.params(":id")));
 		User otherUser=ctx.getUsersController().getUserOrThrow(safeParseInt(req.params(":otherUserID")));
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 
 		int offset=offset(req);
 		PaginatedList<PostViewModel> wall=PostViewModel.wrap(ctx.getWallController().getWallToWallPosts(self!=null ? self.user : null, user, otherUser, offset, 20));
 		ctx.getWallController().populateReposts(self!=null ? self.user : null, wall.list, 2);
+		CommentViewType viewType=self!=null ? self.prefs.commentViewType : CommentViewType.THREADED;
 		if(req.attribute("mobile")==null){
-			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, self!=null ? self.prefs.commentViewType : CommentViewType.THREADED);
+			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, viewType);
 		}
 		Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(wall.list, self!=null ? self.user : null);
 
@@ -819,6 +862,7 @@ public class PostRoutes{
 				.with("otherUser", otherUser)
 				.with("canSeeOthersPosts", ctx.getPrivacyController().checkUserPrivacy(self==null ? null : self.user, user, UserPrivacySettingKey.WALL_OTHERS_POSTS))
 				.with("tab", "wall2wall")
+				.with("commentViewType", viewType)
 				.pageTitle(lang(req).get("wall_of_X", Map.of("name", user.getFirstAndGender())))
 				.headerBack(user);
 		preparePostList(ctx, wall.list, model, self);
@@ -826,7 +870,7 @@ public class PostRoutes{
 	}
 
 	public static Object ajaxCommentPreview(Request req, Response resp){
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		ApplicationContext ctx=context(req);
 
@@ -865,7 +909,7 @@ public class PostRoutes{
 		Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(Stream.of(List.of(topLevel), comments.list).flatMap(List::stream).toList(), self!=null ? self.user : null);
 		model.with("postInteractions", interactions)
 					.with("preview", true)
-					.with("replyFormID", "wallPostForm_commentReplyPost"+postID+ridSuffix)
+					.with("replyFormID", (viewType==CommentViewType.FLAT || isMobile(req) ? "wallPostForm_commentPost" : "wallPostForm_commentReplyPost")+postID+ridSuffix)
 					.with("commentViewType", viewType);
 		model.with("topLevel", topLevel);
 		WebDeltaResponse rb=new WebDeltaResponse(resp)
@@ -883,7 +927,7 @@ public class PostRoutes{
 	}
 
 	public static Object ajaxCommentBranch(Request req, Response resp){
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		ApplicationContext ctx=context(req);
 		int offset=offset(req);
@@ -921,7 +965,7 @@ public class PostRoutes{
 		}
 		Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(Stream.of(List.of(topLevel), allReplies).flatMap(List::stream).toList(), self!=null ? self.user : null);
 		preparePostList(ctx, comments.list, model, self);
-		model.with("postInteractions", interactions).with("replyFormID", "wallPostForm_commentReplyPost"+topLevel.post.id+ridSuffix);
+		model.with("postInteractions", interactions).with("replyFormID", (isMobile(req) ? "wallPostForm_commentPost" : "wallPostForm_commentReplyPost")+topLevel.post.id+ridSuffix);
 		model.with("topLevel", topLevel);
 		model.with("commentViewType", viewType);
 		if(StringUtils.isNotEmpty(rid))
@@ -960,7 +1004,7 @@ public class PostRoutes{
 		if(option==null)
 			throw new ObjectNotFoundException();
 
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		context(req).getPrivacyController().enforceObjectPrivacy(self!=null ? self.user : null, post);
 
@@ -1009,7 +1053,7 @@ public class PostRoutes{
 		if(option==null)
 			throw new ObjectNotFoundException();
 
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		context(req).getPrivacyController().enforceObjectPrivacy(self!=null ? self.user : null, post);
 
@@ -1056,16 +1100,17 @@ public class PostRoutes{
 
 	public static Object repostList(Request req, Response resp){
 		ApplicationContext ctx=context(req);
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
-		int postID=Utils.parseIntOrDefault(req.params(":postID"), 0);
+		int postID=parseIntOrDefault(req.params(":postID"), 0);
 		Post post=ctx.getWallController().getPostOrThrow(postID);
 		ctx.getPrivacyController().enforceObjectPrivacy(self!=null ? self.user : null, post);
 		int offset=offset(req);
 		PaginatedList<PostViewModel> reposts=PostViewModel.wrap(ctx.getWallController().getPostReposts(post, offset, 20));
 		ctx.getWallController().populateReposts(self!=null ? self.user : null, reposts.list, 2);
+		CommentViewType viewType=self!=null ? self.prefs.commentViewType : CommentViewType.THREADED;
 		if(req.attribute("mobile")==null){
-			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, reposts.list.stream().filter(p->!p.post.isMastodonStyleRepost()).toList(), self!=null ? self.prefs.commentViewType : CommentViewType.THREADED);
+			ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, reposts.list.stream().filter(p->!p.post.isMastodonStyleRepost()).toList(), viewType);
 		}
 		UserInteractions interactions=ctx.getWallController().getUserInteractions(Stream.of(reposts.list, List.of(new PostViewModel(post))).flatMap(List::stream).toList(), self!=null ? self.user : null).get(post.getIDForInteractions());
 		RenderedTemplateResponse model;
@@ -1085,7 +1130,8 @@ public class PostRoutes{
 				.with("tab", "reposts")
 				.with("url", "/posts/"+post.id)
 				.with("elementID", "Post"+post.id)
-				.with("maxRepostDepth", 0);
+				.with("maxRepostDepth", 0)
+				.with("commentViewType", viewType);
 		preparePostList(ctx, reposts.list, model, self);
 		if(isMobile(req))
 			return model.pageTitle(lang(req).get("likes_title"));
@@ -1141,7 +1187,7 @@ public class PostRoutes{
 		if(post.getReplyLevel()>0){
 			try{
 				Post topLevel=ctx.getWallController().getPostOrThrow(post.replyKey.getFirst());
-				if(topLevel.privacy!=Post.Privacy.PUBLIC || topLevel.ownerID!=post.authorID){
+				if(topLevel.privacy!=Post.Privacy.PUBLIC || topLevel.ownerID!=topLevel.authorID){
 					throw new UserActionNotAllowedException();
 				}
 				model.with("topLevelPost", topLevel);
@@ -1205,9 +1251,9 @@ public class PostRoutes{
 			throw new BadRequestException();
 
 		ApplicationContext ctx=context(req);
-		int postID=Utils.parseIntOrDefault(req.params(":postID"), 0);
+		int postID=parseIntOrDefault(req.params(":postID"), 0);
 		PostViewModel post=new PostViewModel(ctx.getWallController().getPostOrThrow(postID));
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		Account self=null;
 		if(info!=null && info.account!=null){
 			self=info.account;
@@ -1232,11 +1278,11 @@ public class PostRoutes{
 			model.with("randomID", rid);
 		preparePostList(ctx, comments.list, model, self);
 		Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(Stream.of(List.of(post), comments.list).flatMap(List::stream).toList(), self!=null ? self.user : null);
+		boolean mobile=isMobile(req);
 		model.with("postInteractions", interactions)
-				.with("replyFormID", "wallPostForm_commentReplyPost"+postID+ridSuffix)
+				.with("replyFormID", (viewType==CommentViewType.FLAT || mobile ? "wallPostForm_commentPost" : "wallPostForm_commentReplyPost")+postID+ridSuffix)
 				.with("commentViewType", viewType);
 		model.with("topLevel", post);
-		boolean mobile=isMobile(req);
 		WebDeltaResponse rb=new WebDeltaResponse(resp)
 				.runScript(mobile ? "window._layerScrollHeight=document.scrollingElement.scrollHeight;" : "window._layerScrollHeight=ge(\"postReplies"+postID+ridSuffix+"\").closest(\".layerContent\").scrollHeight;")
 				.insertHTML(WebDeltaResponse.ElementInsertionMode.AFTER_BEGIN, "postReplies"+postID+ridSuffix, model.renderToString())
